--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,27 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/*changed .header to elemental selector header*/
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/*changed .header h1 to elemental selector h1*/
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/*changed .header h1 .seo to elemental selector h1*/
+h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/*changed header .div to elemental selector nav*/
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +36,13 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/*changed .header div ul to elemental selector nav ul*/
+nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/*changed .header div ul li to elemental selector nav ul li*/
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
