--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/*changed .header to elemental selector header*/
+/*changed .header to element selector header*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -16,18 +16,18 @@ header {
     color: #ffffff;
 }
 
-/*changed .header h1 to elemental selector h1*/
+/*changed .header h1 to element selector h1*/
 h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-/*changed .header h1 .seo to elemental selector h1*/
+/*changed .header h1 .seo to element selector h1*/
 h1 .seo {
     color: #d9dcd6;
 }
 
-/*changed header .div to elemental selector nav*/
+/*changed header .div to element selector nav*/
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -36,12 +36,12 @@ nav {
     font-size: 20px;
 }
 
-/*changed .header div ul to elemental selector nav ul*/
+/*changed .header div ul to element selector nav ul*/
 nav ul {
     list-style-type: none;
 }
 
-/*changed .header div ul li to elemental selector nav ul li*/
+/*changed .header div ul li to element selector nav ul li*/
 nav ul li {
     display: inline-block;
     margin-left: 25px;
