--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,6 @@ footer {
     text-align: center;
 }
 
-/*changed .footer h2 to element selector footer*/
-footer h2 {
-    font-size: 20px;
-}
-
 /*changed .header h1 to element selector h1*/
 h1 {
     display: inline-block;
@@ -39,6 +34,17 @@ h1 {
 h1 .seo {
     color: #d9dcd6;
 }
+
+h3 {
+    margin-bottom: 10px;
+        text-align: center;
+    }
+
+/*changed .footer h2 to h4*/
+h4 {
+    font-size: 20px;
+}
+
 
 /*changed header .div to element selector nav*/
 nav {
@@ -105,10 +111,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-section {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
+/* removed these class selectors and created one class selector .benefit-section since they all had the same properties
 
 .benefit-brand {
     margin-bottom: 32px;
@@ -118,7 +126,9 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+}*/
+
+/* removed these class selectors and created one element selector h3
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -133,13 +143,15 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+}*/
 
-.benefit-lead img {
+.benefit-section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* removed these class selectors and created one class selector .benefit-section img
 
 .benefit-brand img {
     display: block;
@@ -151,9 +163,9 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+}*/
 
-.search-engine-optimization {
+.content-blocks {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -161,6 +173,8 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+
+/* removed these selectors and created one class selector .content-blocks
 
 .online-reputation-management {
     margin-bottom: 20px;
@@ -178,11 +192,13 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}*/
 
-.search-engine-optimization img {
+.content-blocks img {
     max-height: 200px;
 }
+
+/* removed these selectors and created one class selector .content-blocks img
 
 .online-reputation-management img {
     max-height: 200px;
@@ -190,12 +206,14 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
-}
+}*/
 
-.search-engine-optimization h2 {
+.content-blocks h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* removed these selectors and created one class selector .content-blocks h2
 
 .online-reputation-management h2 {
     margin-bottom: 20px;
@@ -205,6 +223,6 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+}*/
 
 
